welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:24: error: value % is not a member of java.awt.Color
		setCouleurBrosse(T(T.length + dec -1)%(T.length))
                                                     ^